--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^6.0.1
 
+  shared_preferences: ^2.0.15
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
+  google_fonts: ^3.0.1
+
 
 dev_dependencies:
   flutter_test:
@@ -67,9 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
