--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
   google_fonts: ^3.0.1
+  dots_indicator: ^2.1.0
+  cached_network_image: ^3.2.3
 
 
 dev_dependencies:
