--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   google_fonts: ^3.0.1
   dots_indicator: ^2.1.0
   cached_network_image: ^3.2.3
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.1
+  url_launcher: ^6.1.8
 
 
 dev_dependencies:
